# telecloud

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  config.toml
.cargo/: config
compile/: debug.xml  response.xml  response_entry.xml  response_entry_dir.xml  response_template.xml  response_windows.xml
examples/: dav.rs  db.rs  server.rs  xmlgen.rs
src/: config.rs  filestruct.rs  lib.rs  main.rs  server.rs  utils.rs  webdav.rs
static/: index.html
