[package]
name = "server"
version = "0.1.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
toml = "0.5"
serde_derive = "*"
serde = "*"
log = "0.4"
pretty_env_logger = "0.4"
tokio = {version="*", features=["full"]}
actix-files = "*"
actix-multipart = "*"
futures = "*"
image = "*"
serde_json = "1.0"
uuid = {version="*", features=["v4"]}
teloxide = "*"
reqwest = {version="*", features=["socks"]}
elementtree = "*"
rusqlite = {git = "https://github.com/DuckerMan/rusqlite" ,features=["bundled"]}