[package]
name = "server"
version = "0.1.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0" 
toml = "0.5"
serde_derive = "*"
serde = "*" 
log = "0.4"
pretty_env_logger = "0.4"
tokio = {version="*", features=["full"]}
actix-files = "*"
actix-multipart = "*"
futures = "*"
serde_json = "1.0" # TODO: Can replace it to nanoserde
uuid = {version="*", features=["v4"]}
teloxide = "*"
elementtree = "*" # TODO: May be we don't need it?
rusqlite = {git = "https://github.com/rusqlite/rusqlite" ,features=["bundled"]} # TODO: Change it when my PR will be merged
webdav-handler = {git="https://github.com/duckerman/webdav-handler-rs", features=["actix-compat"]}
bytes = "*"